RFF-7: Inline a helper method
This helper method conflated constructing a request with making the call to the code that is under test. Now it's more obvious what implementation code is being tested in the call sites