@@ -1,5 +1,6 @@
 package uk.gov.di.accountmanagement.api;
 
+import com.amazonaws.services.lambda.runtime.events.APIGatewayProxyRequestEvent;
 import com.nimbusds.oauth2.sdk.id.Subject;
 import org.apache.http.HttpStatus;
 import org.junit.jupiter.api.BeforeEach;
@@ -51,13 +52,15 @@ public class UpdatePasswordIntegrationTest extends ApiGatewayHandlerIntegrationT
 
         Map<String, Object> requestParams =
                 Map.of("principalId", internalCommonSubId, "clientId", CLIENT_ID);
-        var response =
-                makeRequest(
+        APIGatewayProxyRequestEvent request =
+                constructRequest(
                         Optional.of(new UpdatePasswordRequest(TEST_EMAIL, "password-2")),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         requestParams);
+
+        var response = handler.handleRequest(request, context);
 
         assertThat(response, hasStatus(HttpStatus.SC_NO_CONTENT));
         assertThat(userStore.getPasswordForUser(TEST_EMAIL), not(is(hashedOriginalPassword)));
@@ -73,13 +76,15 @@ public class UpdatePasswordIntegrationTest extends ApiGatewayHandlerIntegrationT
     void shouldReturn400WhenNewPasswordIsSameAsOldPassword() throws Exception {
         var internalCommonSubId = setupUserAndRetrieveInternalCommonSubId("password-1");
 
-        var response =
-                makeRequest(
+        APIGatewayProxyRequestEvent request =
+                constructRequest(
                         Optional.of(new UpdatePasswordRequest(TEST_EMAIL, "password-1")),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         Map.of("principalId", internalCommonSubId));
+
+        var response = handler.handleRequest(request, context);
 
         assertThat(response, hasStatus(HttpStatus.SC_BAD_REQUEST));
         assertThat(response, hasBody(objectMapper.writeValueAsString(ErrorResponse.ERROR_1024)));
@@ -96,8 +101,8 @@ public class UpdatePasswordIntegrationTest extends ApiGatewayHandlerIntegrationT
         Map<String, Object> requestParams =
                 Map.of("principalId", internalCommonSubId, "clientId", CLIENT_ID);
 
-        var response =
-                makeRequest(
+        APIGatewayProxyRequestEvent request =
+                constructRequest(
                         Optional.of(
                                 new UpdatePasswordRequest(
                                         TEST_EMAIL, CommonPasswordsExtension.TEST_COMMON_PASSWORD)),
@@ -105,6 +110,8 @@ public class UpdatePasswordIntegrationTest extends ApiGatewayHandlerIntegrationT
                         Collections.emptyMap(),
                         Collections.emptyMap(),
                         requestParams);
+
+        var response = handler.handleRequest(request, context);
 
         assertThat(response, hasStatus(HttpStatus.SC_BAD_REQUEST));
         assertThat(response, hasBody(objectMapper.writeValueAsString(ErrorResponse.ERROR_1040)));
@@ -122,16 +129,20 @@ public class UpdatePasswordIntegrationTest extends ApiGatewayHandlerIntegrationT
         Exception ex =
                 assertThrows(
                         RuntimeException.class,
-                        () ->
-                                makeRequest(
-                                        Optional.of(
-                                                new UpdatePasswordRequest(
-                                                        "other.user@digital.cabinet-office.gov.uk",
-                                                        "password-2")),
-                                        Collections.emptyMap(),
-                                        Collections.emptyMap(),
-                                        Collections.emptyMap(),
-                                        Map.of("principalId", internalCommonSubId)));
+                        () -> {
+                            APIGatewayProxyRequestEvent request =
+                                    constructRequest(
+                                            Optional.of(
+                                                    new UpdatePasswordRequest(
+                                                            "other.user@digital.cabinet-office.gov.uk",
+                                                            "password-2")),
+                                            Collections.emptyMap(),
+                                            Collections.emptyMap(),
+                                            Collections.emptyMap(),
+                                            Map.of("principalId", internalCommonSubId));
+
+                            handler.handleRequest(request, context);
+                        });
 
         assertThat(ex.getMessage(), is("Invalid Principal in request"));
     }
